# cfdns

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
examples/: 30-cfdns.sh  cfdns  cfdns.service
src/: cloudflare.rs  main.rs  system.rs  watcher.rs
src/command/: mod.rs  show.rs  sync.rs
src/config/: file.rs  mod.rs
